spring-boot-app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: java-app
  name: spring-boot-postgres-sample
  namespace: java-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: java-app
  template:
    metadata:
      name: spring-boot-postgres-sample
      labels:
        app: java-app
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: spring-boot-postgres-sample
          image: registry.example.com/k3s/java-app:5
          ports:
            - name: http
              containerPort: 8080
          imagePullPolicy: Always
          resources:
            limits:
              memory: "1Gi"
              cpu: "1000m"
---
apiVersion: v1
kind: Service
metadata:
  name: java-service
  namespace: java-app
spec:
  selector:
    app: java-app
  ports:
    - name: http
      port: 8080
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: java-ingress
  namespace: java-app
spec:
  rules:
    - host: app.test
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: java-service
                port:
                  number: 8080
